# pin2dmd-cracker

./: Cargo.toml  README.md  build.rs
assets/: README.fr.md
python/: emulate_test.py  patch_all.py  patch_branch.py  patch_keygen.py  patch_timer.py  test.py  verify_patches.py
src/: main.rs  patcher.rs
